adds nitpicking changes with spec

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -48,7 +48,9 @@ body {
 #green-dog {
   margin-top: 1.5em;
 }
-
+#yellow-dog {
+  margin-bottom: 1.1em;
+}
 .third-row > div {
   display: flex;
   flex-direction: column;
