--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -48,9 +48,15 @@ body {
 #green-dog {
   margin-top: 1.55em;
 }
+
 #yellow-dog {
+  margin-bottom: 1em;
+}
+
+#gray-dog {
   margin-bottom: 1.2em;
 }
+
 .third-row > div {
   display: flex;
   flex-direction: column;
@@ -65,7 +71,6 @@ body {
   justify-items: center; 
   align-items: center;
   text-align: center;
-  gap: 20px; 
   width: 100%; 
   height: 100%;
   p {
