adjusts dog headers to use %

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -46,11 +46,11 @@ body {
 }
 
 #green-dog {
-  margin-top: 0.7em;
+  margin-top: 4%;
 }
 
 #yellow-dog {
-  margin-bottom: 1em;
+  margin-bottom: 2%;
 }
 
 .third-row > div {
